# fdap-vdb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: bench_engine.rs  bench_format.rs  bench_index.rs
crates/vdb-client/: Cargo.toml  build.rs
crates/vdb-client/src/: client.rs  lib.rs
crates/vdb-common/: Cargo.toml
crates/vdb-common/src/: config.rs  error.rs  lib.rs  metrics.rs  schema.rs
crates/vdb-index/: Cargo.toml
crates/vdb-index/src/: flat.rs  hnsw.rs  lib.rs  traits.rs
crates/vdb-python/: Cargo.toml  pyproject.toml
crates/vdb-python/src/: lib.rs
crates/vdb-python/tests/: conftest.py  test_basic.py  test_search.py  test_sql.py
crates/vdb-query/: Cargo.toml
crates/vdb-query/src/: context.rs  lib.rs  table_provider.rs
crates/vdb-query/src/udf/: distance.rs
crates/vdb-server/: Cargo.toml  build.rs
crates/vdb-server/src/: flight.rs  grpc.rs  lib.rs
crates/vdb-storage/: Cargo.toml
crates/vdb-storage/src/: catalog.rs  engine.rs  lib.rs  memtable.rs  segment.rs  wal.rs
crates/vdb-storage/src/format/: mod.rs  parquet.rs  vortex.rs
docs/: architecture.md
examples/: demo.rs
proto/vdb/v1/: service.proto
src/: main.rs
tests/: test_insert_search.rs
