[workspace]
members = [
    "crates/vdb-common",
    "crates/vdb-index",
    "crates/vdb-storage",
    "crates/vdb-query",
    "crates/vdb-server",
    "crates/vdb-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# FDAP stack — datafusion 52 pins arrow 57; arrow-flight 57 pins tonic 0.14
datafusion = "52"
arrow = { version = "57", features = ["prettyprint"] }
arrow-array = "57"
arrow-schema = "57"
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-ipc = "57"
arrow-cast = "57"
parquet = { version = "57", features = ["async"] }

# async runtime
tokio = { version = "1", features = ["full"] }

# gRPC — version driven by arrow-flight 57
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# vector index
hnsw_rs = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# misc
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
tempfile = "3"
rand = "0.8"
parking_lot = "0.12"

# workspace crates
vdb-common = { path = "crates/vdb-common" }
vdb-index = { path = "crates/vdb-index" }
vdb-storage = { path = "crates/vdb-storage" }
vdb-query = { path = "crates/vdb-query" }
vdb-server = { path = "crates/vdb-server" }
vdb-client = { path = "crates/vdb-client" }

[package]
name = "fdap-vdb"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fdap-vdb"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vdb-server = { workspace = true }
vdb-common = { workspace = true }

[dev-dependencies]
vdb-client = { workspace = true }
vdb-storage = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-flight = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
