[package]
name = "vdb-storage"
version.workspace = true
edition.workspace = true

[dependencies]
vdb-common = { workspace = true }
vdb-index = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
